Fix uneven spaces between list items

--- a/source/assets/stylesheets/components/_text.scss
+++ b/source/assets/stylesheets/components/_text.scss
@@ -24,5 +24,6 @@ p{
   > li{
     padding: 1rem 0;
     border-bottom: 2px solid $gray-200;
+    margin-bottom: 0;
   }
 }
